tests/Rules/Structure/Fixtures/invalid/meta_viewport_bad.html.twig
{# 0 errors #}
<meta name="viewport" content="width=device-width, user-scalable=no">
